--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -89,6 +89,7 @@
 % \newcommand{\scal}[2]{#1 \cdot #2 }
 \newcommand{\im}{\mathrm{im}\,}
 % \newcommand{\ker}{\mathrm{ker}}
+\DeclareMathOperator{\tr}{tr}
 
 \begin{document}
     \begin{titlepage}
