--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -10,10 +10,13 @@
     \begin{section}{Laplacian Operators on Graphs}
         \subfile{sections/2/3}
     \end{section}
-    \begin{section}{Properties of the Laplacian Eigenfunctions}
+    \begin{section}{Laplacian Eigenfunctions in Analysis}
         \subfile{sections/2/4}
     \end{section}
-    \begin{section}{Heat Equation on Graphs}
+    \begin{section}{Laplacian Eigenfunctions on Graphs}
         \subfile{sections/2/5}
+    \end{section}
+    \begin{section}{Heat Equation on Graphs}
+        \subfile{sections/2/6}
     \end{section}
 \end{document}
