--- a/tesi/sections/2/1.tex
+++ b/tesi/sections/2/1.tex
@@ -71,7 +71,7 @@
     % In a graph $\mc{G}$ the non trivial chain groups are therefore $C_0(\mc{G})$ and $C_1(\mc{G})$, also called vertex and edge spaces. 
     % The canonical basis of the vertex space is the set of vertexes $\{\ket{i}\}_{i \in I}$, and that of edges which is a subset of $\{\ket{i,j}\}_{(i,j)\in I\times I}$.
 
-    Viewing $\mc{G}$ as a simplicial complex we recall that $C_0$ and $C_1$ are the groups of $0$ and $1$-chains respectively. We denote by $\ch{i}$
+    \bb{Notation}: viewing $\mc{G}$ as a simplicial complex we recall that $C_0$ and $C_1$ are the groups of $0$ and $1$-chains respectively. We denote by $\ch{i}$
     the vertex $i$ as a group element of $C_0$, and we denote $\ch{i,j}$ the edge joining $\ch{i}$ to $\ch{j}$.
     Since $C_1$ is a group, whenever $\ket{i,j} \in C_1$ then also $\ket{j,i} = -\ket{i,j} \in C_1$. 
     
