--- a/tesi/sections/appendixC/main.tex
+++ b/tesi/sections/appendixC/main.tex
@@ -1,5 +1,6 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
+    \label{app:C}
     An important role in the definition of a convolution on simplicial complexes is played by the Laplacian operator,
     especially by its eigenfunctions and spectrum. A more thorough discussion of this operator can be found in \cite{laplacian}.
     
