--- a/tesi/sections/3.tex
+++ b/tesi/sections/3.tex
@@ -1,17 +1,17 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Group Equivariant Neural Networks}
+    \begin{section}{Generalities on Convolution}
         \label{sec:3:1}
         \subfile{sections/3/1}   
     \end{section}
-    \begin{section}{Convolutional Neural Networks}
+    \begin{section}{Group Equivariant Convolution}
         \subfile{sections/3/2}   
     \end{section}
-    \begin{section}{Simplicial Neural Networks}
+    \begin{section}{Spectral Convolution}
         \subfile{sections/3/3}   
     \end{section}
-    \begin{section}{Message Passing Neural Networks}
-        \subfile{sections/3/4}  
-    \end{section}
+    % \begin{section}{Message Passing Neural Networks}
+    %     \subfile{sections/3/4}  
+    % \end{section}
 \end{document}
