--- a/tesi/sections/3/1.tex
+++ b/tesi/sections/3/1.tex
@@ -1,7 +1,4 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
-    In many classification task the neural networks seem to learn some symmetries under which the classification is invariant.
-    In some simple situations, where these symmetries are obvious and understandable by humans, we hope to find a neural architecture
-    that already knows the symmetry of the data before starting to learn. An approach was proposed in \cite{gcnn} with group equivariant
-    convolutional networks. Before discussing those particular networks we analyse the meaning of group equivariance.
+    Convolutional neural networks are today one of the most efficient deep learning technique.
 \end{document}
