--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -1,23 +1,20 @@
 \documentclass[../3.tex]{subfiles}
 \begin{document}
 
-    In \autoref{ch:1} we discussed laplacian operators, in this section we use the laplacian 
-    eigenchains to define convolutional layers as in \cite{simplicialNN} in a so called \ii{simplicial neural network}. 
-
-    Let $\{\ket{i}\}_{i \in I}$ be the canonical basis of chains for $C_p$, namely the chains corresponding to the $p$-simplexes of the simplicial complex.
-    Nevertheless can also choose the laplacian eigenchains $\{\ket{e_i}\}_{i \in I}$, such that $\Delta_p\ket{e_i} = \lambda_i\ket{e_i}$, as a basis for $C_p$. This change of basis
-    is reflected on a change of coordinates called \ii{simplicial Fourier transform}.
-
+    In order to construct a convolutional neural network that classifies data defined on a graph we need a definition of convolution on graphs.
+    To do this we recall that in Chapter \ref{ch:2} we saw that the Fourier diagonalizes the convolution. Here we want to define a convolution on graphs
+    based on this fact. First we introduce what we call \ii{graph Fourier transform}.
+    
     \begin{defn}
-        Let $\ket{f} \in C_p$ and $dimC_p = n_p$, we define the \ii{simplicial Fourier transform} $\mc{F}_p : \R^{n_p} \to \R^{n_p}$ to be
+        Let $\ket{f} \in C_0$ and $dimC_0 = n_0$, we define the \ii{graph Fourier transform}\\
+        $\mc{F}_0 : \R^{n_0} \to \R^{n_0}$ to be
         \[ (\braket{i}{f})_{i \in I} \mapsto (\braket{e_i}{f})_{i \in I},\]
-        where $I = \{1,...,n_p\}$.
+        where $I = \{1,...,n_0\}$ and $\ch{e_i}$ are the eigenfunctions of the $0$-laplacian.
     \end{defn}
 
     This transform only defines a change of basis since $\ket{f} = \sum_{i \in I}\braket{i}{f}\ket{i} = \sum_{i \in I}\braket{e_i}{f}\ket{e_i}$, and therefore is invertible.
-    We can in fact represent the simplicial Fourier transform with the matrix $F^{-1}_{ij} = F^\dagger_{ij} := \braket{e_i}{j}$, and its inverse $F_{ij} := \braket{i}{e_j}$.
-    To define a convolution between two $p$-chains we use the famous convolution theorem $\mc{F}(f * \psi) = \mc{F}(f)\mc{F}(\psi)$. 
-    % The laplacian is diagonalized by the simplicial Fourier transform, i.e. $\Delta_p = F diag(\lambda_i)_{i \in I} F^\dagger$.
+    We can in fact represent the graph Fourier transform with the matrix $F^{-1}_{ij} = F^\dagger_{ij} := \braket{e_i}{j}$, and its inverse $F_{ij} := \braket{i}{e_j}$.
+    To define a convolution between two $0$-chains we use the famous convolution theorem $\mc{F}(f * \psi) = \mc{F}(f)\mc{F}(\psi)$. 
 
     \begin{defn}
         Let $\{\ket{e_i}\}_{i \in I}$ be a basis such that $\Delta_p\ket{e_i} = \lambda_i\ket{e_i}$, let $\ket{f},\ket{\psi} \in C_p$, we define the representatives of $\ket{f * \psi}$ on
@@ -26,10 +23,6 @@
         Therefore $\ket{f * \psi} = \sum_{i \in I}\braket{e_i}{f}\braket{e_i}{\psi}\ket{e_i}$.
     \end{defn}
 
-    The filters used in \cite{simplicialNN} are low degree polynomials in the frequency domain, for instance a filter defined by $\braket{i}{\psi_\mu} = \sum_{n = 0}^N \mu_n \lambda_i^n$.
-    This way one can easily define the convolution on the canonical basis as 
-    \[\braket{i}{f * \psi_\mu} = \sum_{j \in I}\braket{i}{e_j}\braket{e_j}{f*\psi_\mu} = \sum_{n = 0}^N\mu_n \bra{i}(\sum_{j \in I}\ket{e_j}\lambda_j^n\bra{e_j})\ket{f}
-     = \sum_{n=0}^N \mu_n \bra{i}\Delta_p^n\ket{f},\]
-    therefore $\ket{f*\psi_\mu} = \sum_{n = 0}^N \mu_n \Delta_p^n\ket{f}$.
+    This can be trivially extended to simplicial complexes \footnote{In general on any chain complex} using the eigenfunctions of higher dimensional laplacians, as done in \cite{simplicialNN}.
 
 \end{document}
