--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -10,7 +10,7 @@
     \begin{section}{Laplacian Operators on Graphs}
         \subfile{sections/2/3}
     \end{section}
-    \begin{section}{Laplacian Eigenfunctions in Analysis}
+    \begin{section}{Laplacian Eigenfunctions in $\R^n$}
         \subfile{sections/2/4}
     \end{section}
     \begin{section}{Laplacian Eigenfunctions on Graphs}
