--- a/tesi/sections/3/3.tex
+++ b/tesi/sections/3/3.tex
@@ -23,6 +23,6 @@
         Therefore $\ket{f * \psi} = \sum_{i \in I}\braket{e_i}{f}\braket{e_i}{\psi}\ket{e_i}$.
     \end{defn}
 
-    This can be trivially extended to simplicial complexes \footnote{In general on any chain complex} using the eigenfunctions of higher dimensional laplacians, as done in \cite{simplicialNN}.
+    This can be trivially extended to simplicial complexes \footnote{Actually on any chain complex.} using the eigenfunctions of higher dimensional laplacians, as done in \cite{simplicialNN}.
 
 \end{document}
