--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -118,6 +118,8 @@
     \end{chapter}
     \begin{chapter}{Convolutional Neural Networks}
         \label{ch:3}
+        Convolutional neural networks or CNN's are today one of the most common deep learing architectures, especially successful at processing
+        that has a known grid-like topology. For instance time series, or signals can be sampled in a 1D grid, while images can be thought as a 2D grid.
         \subfile{sections/3}
     \end{chapter}
     \newpage
