--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -84,3 +84,11 @@
   title = {Calculus of Variations},
   year = 1963
 }
+
+@book{deep,
+    title={Deep Learning},
+    author={Ian Goodfellow and Yoshua Bengio and Aaron Courville},
+    publisher={MIT Press},
+    note={\url{http://www.deeplearningbook.org}},
+    year={2016}
+}
